Fixes on mobile

--- a/src/assets/css/Contact.css
+++ b/src/assets/css/Contact.css
@@ -56,7 +56,7 @@ input {
 }
 
 label {
-  font-size: 1.2rem;
+  font-size: clamp(1rem, 2vw, 1.3rem);
   font-weight: 400;
   margin-bottom: 0.2rem;
 }
